Fix body overflow in new mac

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 
 body {
   background-color: black !important;
+  overflow: hidden;
 }
 
 body::before {
